--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "dependencies": {
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.7",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -17,13 +24,5 @@
   "bugs": {
     "url": "https://github.com/Joseph-D98/BudgetTracker/issues"
   },
-  "homepage": "https://github.com/Joseph-D98/BudgetTracker#readme",
-  "dependencies": {
-    "compression": "^1.7.4",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.6",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {},
-  "keywords": []
+  "homepage": "https://github.com/Joseph-D98/BudgetTracker#readme"
 }
