--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,8 @@
 {
     "name": "Budget Tracker",
     "short_name": "Budget Tracker",
-    "icons": [{
+    "icons": [
+        {
             "src": "icons/icon-72x72.png",
             "sizes": "72x72",
             "type": "image/png"
